--- a/index.html
+++ b/index.html
@@ -1,8 +1,7 @@
 <!DOCTYPE html>
-<!--[if lt IE 7]>      <html class="no-js lt-ie9 lt-ie8 lt-ie7"> <![endif]-->
-<!--[if IE 7]>         <html class="no-js lt-ie9 lt-ie8"> <![endif]-->
-<!--[if IE 8]>         <html class="no-js lt-ie9"> <![endif]-->
-<!--[if gt IE 8]><!--> <html class="no-js"> <!--<![endif]-->
+
+<html>
+
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
@@ -27,11 +26,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
     
     <!-- CSS -->
-    <link rel="stylesheet" href="css/styles.css">
+    <link rel="stylesheet" href="less/styles.less">
+    <!-- <link rel="stylesheet" href="css/styles.css"> -->
     
     <!-- Javascript -->
     <script src="js/lib/jquery-1.9.1.min.js"></script>
    
+    <script src="js/lib/less.js"></script>
+
     <script src="js/lib/utils.js"></script>
 
     <script src="js/main.js"></script>
@@ -56,7 +58,7 @@
 <!-- Main -->
 <div id="main">
 
-
+    <input type='button' class='sample' value='click me' />
 
 </div>
 <!-- /Main -->
