--- a/_backbone.html
+++ b/_backbone.html
@@ -140,7 +140,7 @@ var SectionView = Backbone.View.extend({
 // Main view
 var MainView = Backbone.View.extend({
 
-    el: $('main'),
+    el: $('#main'),
 
     initialize: function() {
         _.bindAll(this, 'render', 'onNavModelChange');
